--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <hr />
           <p>Full Stack Developer / Consultant</p>
           <p>
-            <a href="/assets/CV_Juli.pdf.pdf" target="_blank"
+            <a href="/assets/CV_Juli.pdf" target="_blank"
             ><i class="fa fa-print fa-2x"></i
           ></a>
             <a href="https://github.com/julichow" target="_blank"
