--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <hr />
           <p>Full Stack Developer / Consultant</p>
           <p>
-            <a href="/assets/CV_Juli.pdf" target="_blank"
+            <a href="/assets/CV.pdf" target="_blank"
             ><i class="fa fa-print fa-2x"></i
           ></a>
             <a href="https://github.com/julichow" target="_blank"
@@ -291,7 +291,7 @@
                 <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
               </span>
             </a>
-            <a href="/assets/CV_Juli.pdf" target="_blank">
+            <a href="/assets/CV.pdf" target="_blank">
               <span class="fa-stack fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-print fa-stack-1x fa-inverse"></i>
